Add metadata to presentations

--- a/monthly-updates/2016-09.md
+++ b/monthly-updates/2016-09.md
@@ -40,7 +40,7 @@ Norfolk Data Science: <a href="http://www.meetup.com/NorfolkDataSci/" target="_b
 Norfolk Data Science
 ========================================
 author: Regular Meeting
-date: `r gsub(" 0", " ", format(as.Date('2016-09-06'), format="%B %d, %Y"))`
+date: September 6, 2016
 css: ../norfolk-data-sci-presentations.css
 
 Sponsors
@@ -80,63 +80,9 @@ Job Opportunities
 ## Booz Allen - Speak to William Reith
 
 
-```{r pulling-googleanalytics, eval=F, echo=F}
 
-options(stringsAsFactors = FALSE)
-suppressWarnings(suppressPackageStartupMessages(library(plyr)))
-suppressWarnings(suppressPackageStartupMessages(library(dplyr)))
-suppressWarnings(suppressPackageStartupMessages(library(tidyr)))
-suppressWarnings(suppressPackageStartupMessages(library(lubridate)))
-suppressWarnings(suppressPackageStartupMessages(library(httr)))
-suppressWarnings(suppressPackageStartupMessages(library(RGoogleAnalytics)))
 
-# determine column to paste in
-current_date <- Sys.Date()
-end_of_previous_month <- current_date - days(day(current_date))
 
-datestart <- format(end_of_previous_month, "%Y-%m-01")
-dateend <- format(end_of_previous_month, "%Y-%m-%d")
-
-load("token_file")
-ValidateToken(token)
-query.list <- Init(start.date = datestart,
-                   end.date = dateend,
-                   dimensions = "ga:searchDestinationPage",
-                   metrics = "ga:sessions,ga:pageviews,ga:users",
-                   max.results = 10000,
-                   table.id = "ga:126488020") # pull the table id from "View ID" in GA Profile
-# Create the Query Builder object so that the query parameters are validated
-ga.query <- QueryBuilder(query.list)
-# Extract the data and store it in a data-frame
-ga.data <- GetReportData(ga.query, token, split_daywise = F, delay = 5)
-
-ga.data %>% 
-  filter(grepl('/NorfolkDataSci', searchDestinationPage)) %>% 
-  summarize(total_users=sum(users),
-            total_pageviews=sum(pageviews)) %>% 
-  mutate(pageviews_per_user = round(total_pageviews / total_users, 1))
-
-ga.data %>% 
-  filter(searchDestinationPage %in% c('/code/', 
-                                      '/community/',
-                                      '/contact-us/', 
-                                      '/leadership/',
-                                      '/mission/',
-                                      '/news/',
-                                      '/participation/',
-                                      '/projects/',
-                                      '/roadmaps/')) %>% 
-  summarize(total_users=sum(users),
-            total_pageviews=sum(pageviews)) %>% 
-  mutate(pageviews_per_user = round(total_pageviews / total_users, 1))
-
-```
-
-```{r pulling-twitterdata, echo=F}
-
-#TBD
-
-```
 
 Digital Presence Analysis
 ========================================
