--- a/monthly-updates/2016-10.md
+++ b/monthly-updates/2016-10.md
@@ -12,7 +12,7 @@ Norfolk Data Science: <a href="http://www.meetup.com/NorfolkDataSci/" target="_b
 </div>
 
 <! --- CHANGE THE HREF TO POINT TO YOUR REPOSITORY SO PEOPLE CAN FORK IT --->
-<a href="https://github.com/NorfolkDataSci/presentations/monthly-updates"><img style="z-index: 1000; margin: 0px !important; max-height: 300px !important; position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"></a>
+<a href="https://github.com/NorfolkDataSci/presentations/learning-git"><img style="z-index: 1000; margin: 0px !important; max-height: 300px !important; position: absolute; top: 0; right: 0; border: 0;" src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png"></a>
 
 <! --- SET THE URL OF YOUR PRESENTATION. THIS WILL LOOK LIKE https://norfolkdatasci.github.io/YOUR-PRESENTATION-NAME-HERE --->
 <meta property="og:url" content="https://norfolkdatasci.github.io/monthly-updates/2016-10">
@@ -40,7 +40,7 @@ Norfolk Data Science: <a href="http://www.meetup.com/NorfolkDataSci/" target="_b
 Norfolk Data Science
 ========================================
 author: Regular Meeting
-date: `r gsub(" 0", " ", format(as.Date('2016-10-04'), format="%B %d, %Y"))`
+date: October 4, 2016
 css: ../norfolk-data-sci-presentations.css
 
 WiFi and Screenshare
@@ -88,63 +88,9 @@ Contest Continuing
   <li>Add 2 Issues on your GitHub repo</li>
 </ol>
 
-```{r pulling-googleanalytics, eval=F, echo=F}
 
-options(stringsAsFactors = FALSE)
-suppressWarnings(suppressPackageStartupMessages(library(plyr)))
-suppressWarnings(suppressPackageStartupMessages(library(dplyr)))
-suppressWarnings(suppressPackageStartupMessages(library(tidyr)))
-suppressWarnings(suppressPackageStartupMessages(library(lubridate)))
-suppressWarnings(suppressPackageStartupMessages(library(httr)))
-suppressWarnings(suppressPackageStartupMessages(library(RGoogleAnalytics)))
 
-# determine column to paste in
-current_date <- Sys.Date()
-end_of_previous_month <- current_date - days(day(current_date))
 
-datestart <- format(end_of_previous_month, "%Y-%m-01")
-dateend <- format(end_of_previous_month, "%Y-%m-%d")
-
-load("token_file")
-ValidateToken(token)
-query.list <- Init(start.date = datestart,
-                   end.date = dateend,
-                   dimensions = "ga:searchDestinationPage",
-                   metrics = "ga:sessions,ga:pageviews,ga:users",
-                   max.results = 10000,
-                   table.id = "ga:126488020") # pull the table id from "View ID" in GA Profile
-# Create the Query Builder object so that the query parameters are validated
-ga.query <- QueryBuilder(query.list)
-# Extract the data and store it in a data-frame
-ga.data <- GetReportData(ga.query, token, split_daywise = F, delay = 5)
-
-ga.data %>% 
-  filter(grepl('/NorfolkDataSci', searchDestinationPage)) %>% 
-  summarize(total_users=sum(users),
-            total_pageviews=sum(pageviews)) %>% 
-  mutate(pageviews_per_user = round(total_pageviews / total_users, 1))
-
-ga.data %>% 
-  filter(searchDestinationPage %in% c('/code/', 
-                                      '/community/',
-                                      '/contact-us/', 
-                                      '/leadership/',
-                                      '/mission/',
-                                      '/news/',
-                                      '/participation/',
-                                      '/projects/',
-                                      '/roadmaps/')) %>% 
-  summarize(total_users=sum(users),
-            total_pageviews=sum(pageviews)) %>% 
-  mutate(pageviews_per_user = round(total_pageviews / total_users, 1))
-
-```
-
-```{r pulling-twitterdata, echo=F}
-
-#TBD
-
-```
 
 Digital Presence Analysis
 ========================================
