checking style format

--- a/python-for-data-science/python-for-data-science.ipynb
+++ b/python-for-data-science/python-for-data-science.ipynb
@@ -205,6 +205,20 @@
     "\n",
     "Demonstrate how the entire analysis can be contained in the notebook"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true,
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "print \"this is some code\""
+   ]
   }
  ],
  "metadata": {
