check styling on slides

--- a/python-for-data-science/python-for-data-science.ipynb
+++ b/python-for-data-science/python-for-data-science.ipynb
@@ -34,7 +34,7 @@
    "cell_type": "markdown",
    "metadata": {
     "slideshow": {
-     "slide_type": "subslide"
+     "slide_type": "slide"
     }
    },
    "source": [
@@ -69,7 +69,25 @@
     "Head over to [https://www.continuum.io/downloads](https://www.continuum.io/downloads) and use the GUI downloader  \n",
     "![GUI Installer](install_windows.png)\n",
     "\n",
-    "Run the executable and follow the instructions"
+    "Run the executable and follow the instructions. We can also set a `PATH` variable to make python easier to use"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "## Windows cont.\n",
+    "* On XP, right click `My Computer -> Properties` and navigate to the `System Properties -> Advanced` tab\n",
+    "<img src=\"system_properties.png\" alt=\"System properties\" width=\"40%\" style=\"float: right\"/>\n",
+    "* Copy the following into the end of the `PATH` variable  \n",
+    "      ;%PYTHON_HOME%\\;%PYTHON_HOME%\\Scripts\n",
+    "* Test your install by opening a command prompt and running  \n",
+    "      C:\\Users\\Username>python\n",
+    "* On Windows 7 and up, search for \"environment variables\" and follow the same steps"
    ]
   },
   {
@@ -81,13 +99,18 @@
    },
    "source": [
     "# Getting additional packages\n",
-    "Use pip\n",
+    "Anaconda comes with two ways to manage packages: `pip` and `conda`. Using these will..\n",
+    "* Insure your packages install correctly\n",
+    "* Allow you to easily upgrade and uninstall packages\n",
+    "* Manage dependencies when install\n",
     "\n",
     "### Mac\n",
-    "    pip install package\n",
-    "    \n",
+    "    pip install <package>  \n",
+    "Or.. \n",
+    "\n",
+    "    conda install <package>  \n",
     "### Windows\n",
-    "    do stuff ..."
+    "`pip` can also be used on Windows if you properly set up your `ENV` variable during installation. You can also run it from within `git bash` or `cygwin` if you have those installed."
    ]
   },
   {
@@ -208,17 +231,82 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {
-    "collapsed": true,
+    "collapsed": false,
     "slideshow": {
      "slide_type": "slide"
     }
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "4\n",
+      "9\n",
+      "16\n",
+      "25\n",
+      "36\n",
+      "49\n",
+      "64\n",
+      "81\n",
+      "Hi\n"
+     ]
+    }
+   ],
    "source": [
-    "print \"this is some code\""
+    "for i in range(10):\n",
+    "    print i*i\n",
+    "    \n",
+    "print \"Hi\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4.0\n"
+     ]
+    },
+    {
+     "data": {
+      "image/png": "iVBORw0KGgoAAAANSUhEUgAAAW0AAAEDCAYAAAD+/1UIAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAD+BJREFUeJzt3F2MXPV5x/HvOgbzkgUqmFKERRKoeEKCyptKVAEKKC8F\nkpCLqKJpKlq4aC9AWKKKGiFViItW7UVJoM1NSLBI5QYoCrRUhIJU6pRcAEZQ0YCf1pAAprxsSgS2\nQPF6Pb2YoRnM7s6Z3XPmvMz3IyF2rf8cP3/t7m9/85/jmev3+0iS2mFD3QNIkooztCWpRQxtSWoR\nQ1uSWsTQlqQWMbQlqUU2jlsQEacCdwJ9YA44GfizzLyl4tkkSQeZm+Q+7YjYAOwGPpGZL1U2lSRp\nWZMej3waeM7AlqR6TBralwPfq2IQSdJ4hUM7Ig4BLgP+obpxJEmrGftC5IhLgCcyc2Hcwn6/35+b\nm1v7VJLUcfsWl9j2wE7u3b6LA32476+/WCg0JwntL1PwaGRubo6FhT0TXLo9er35zu4N3F/bub92\neO7lN7nt/md55X/fpnfMYVx16WmFH1sotCPiCAYvQv7RGmeUpJm3uH+Je/79J/zLYy/S78Onz9nM\nlz55CpsO/UDhaxQK7cx8G+itdVBJmnXLtes46Vcmvs4kxyOSpAmV0a5HGdqSVJGy2vUoQ1uSSlZ2\nux5laEtSiapo16MMbUkqQZXtepShLUnrVHW7HmVoS9IaTatdjzK0JWkNptmuRxnakjSBOtr1KENb\nkgqqq12PMrQlaYy62/UoQ1uSVtGEdj3K0JakZTSpXY8ytCXpIE1r16MMbUkaamq7HmVoSxLvbde/\neszhXHnpRxvTrkcZ2pJmWhva9ShDW9LMaku7HmVoS5o5bWvXowxtSTOlje16lKEtaSa0uV2PMrQl\ndV7b2/UoQ1tSZ3WlXY8ytCV1Upfa9ShDW1KndLFdjzK0JXVGV9v1KENbUut1vV2PMrQltdostOtR\nhUI7Io4Gvg2cDhwArsrMR6scTJJWM0vtelTRpn0zcH9m/k5EbASOqHAmSVrVrLXrUWNDOyKOAi7I\nzD8EyMz9wFsVzyVJ77NvcYm7Ht41c+16VJGm/RHgZxGxFTgD2AFsycx3Kp1MkkY89/Kb3H7bY+x+\nfe/MtetRRUJ7I3A2cHVm7oiIbwBfA26odDJJYnbPrldSJLR3Ay9l5o7h53cDfzruQb3e/HrmarQu\n7w3cX9t1aX87X3iDm+94kt2v7+WEY4/k2svP5PRTjqt7rFqNDe3MfC0iXoqIUzPzv4BPAc+Me9zC\nwp4y5mucXm++s3sD99d2XdnfSu1684nHdGJ/yyn6y7bo3SPXAtsi4hDgeeDKNc4lSaua5TtDiigU\n2pn5H8BvVjyLpBnm2XUx/otISbWzXRdnaEuqje16coa2pFrYrtfG0JY0Vbbr9TG0JU2N7Xr9DG1J\nlbNdl8fQllQp23W5DG1JlbBdV8PQllQ623V1DG1JpbFdV8/QllQK2/V0GNqS1sV2PV2GtqQ1s11P\nn6EtaWK26/oY2pImYruul6EtqRDbdTMY2pLGsl03h6EtaUW26+YxtCUty3bdTIa2pPewXTeboS3p\n/9mum8/QlmS7bhFDW5pxtut2MbSlGWW7bidDW5pBtuv2MrSlGWK7bj9DW5oRtutuMLSljrNdd4uh\nLXWY7bp7CoV2RPwUeBM4ACxm5rkVziRpnWzX3VW0aR8ALszMn1c5jKT1s113W9HQngM2VDmIpPVZ\n3L/E1vt+zD3bd9muO6xoaPeBhyJiCfhWZt5a4UySJmS7nh1z/X5/7KKIOCEzX4mIHvAQcE1mPrLK\nQ8ZfVNK67VtcYtsDO7l3+y4O9OELF5zMFZecxmGbvMegheYKLSoS2qMi4gZgT2betMqy/sLCnomu\n2xa93jxd3Ru4vzYZbde9Yw7jqktP4/xzTurM/pbTpa/fwXq9+UKhPfbXcUQcAWzIzL0RcSTwWeDG\ndc4naY28M2S2FXkOdTxwT0T0h+u3ZeaD1Y4laTnLtWvPrmfL2NDOzJ8AZ05hFkkrsF3rXb5aITWc\n7VqjDG2poWzXWo6hLTWQ7VorMbSlBrFdaxxDW2oI27WKMLSlmtmuNQlDW6qR7VqTMrSlGtiutVaG\ntjRltmuth6EtTYntWmUwtKUpsF2rLIa2VCHbtcpmaEsVsV2rCoa2VDLbtapkaEslsl2raoa2VALb\ntabF0JbWyXataTK0pTWyXasOhra0BrZr1cXQliZgu1bdDG2pINu1msDQlsawXatJDG1pFbZrNY2h\nLS3Ddq2mMrSlg9iu1WSGtjRku1YbGNoStmu1h6GtmWa7VtsUDu2I2ADsAHZn5mXVjSRNh+1abTRJ\n094CPAMcVdEs0lTYrtVmhUI7IjYDlwJ/DlxX6URShXa+8AY3bXvCdq3WKtq0vw58FTi6wlmkyrzb\nrh987EUO2K7VYmNDOyI+B7yWmU9FxIXAXJEL93rz6xytubq8N+je/na+8AY33/Eku1/fy68dewRb\nLj+L0085ru6xKtO1r9/Bur6/ceb6/f6qCyLiL4DfB/YDhwPzwPcz84pVHtZfWNhT2pBN0uvN09W9\nQbf2t9zZ9R9/6Qz2vPVO3aNVpktfv+V0eX+93nyhQjy2aWfm9cD1ABHxSeBPxgS2VLuV7gw5bNNG\nuvkjr1nhfdrqFO8MUddNFNqZuR3YXtEs0rp437VmgU1brWe71iwxtNVqtmvNGkNbrWS71qwytNU6\ntmvNMkNbrWG7lgxttYTtWhowtNVotmvpvQxtNZbtWno/Q1uNY7uWVmZoq1Fs19LqDG01gu1aKsbQ\nVu1s11JxhrZqY7uWJmdoqxa2a2ltDG1Nle1aWh9DW1Nju5bWz9BW5WzXUnkMbVXKdi2Vy9BWJWzX\nUjUMbZXOdi1Vx9BWaWzXUvUMbZXCdi1Nh6GtdbFdS9NlaGvNbNfS9BnampjtWqqPoa2J2K6lehna\nKsR2LTWDoa2xbNdSc4wN7YjYBPwQOHS4/u7MvLHqwVQ/27XUPGNDOzN/EREXZebbEfEB4EcR8YPM\nfGwK86kmtmupmQodj2Tm28MPNw0f069sItVq3+ISdz28y3YtNVSh0I6IDcATwCnANzPz8UqnUi2e\n+583uf22x9j9+l7btdRQc/1+8dIcEUcB9wLXZOYzqyy1ibfIvsUltj2wk3u37+JAH75wwclccclp\nHLbJ16mlKZorsmiin8rMfCsiHgYuBlYLbRYW9kxy6dbo9eY7tbeDz66v+71zOP6oTex56x26s8tf\n6trX72Dur716vflC64rcPXIcsJiZb0bE4cBngL9c33iq20p3hmw+8ZjO/lBIXVCkaZ8A3D48194A\n3JmZ91c7lqrknSFSexW55e9p4OwpzKKKed+11H6+0jQjbNdSNxjaHWe7lrrF0O4w27XUPYZ2B9mu\npe4ytDvGdi11m6HdEbZraTYY2h1gu5Zmh6HdYrZrafYY2i1lu5Zmk6HdMrZrabYZ2i1iu5ZkaLeA\n7VrSuwzthrNdSxplaDeU7VrScgztBrJdS1qJod0gtmtJ4xjaDWG7llSEoV0z27WkSRjaNbJdS5qU\noV0D27WktTK0p8x2LWk9DO0psV1LKoOhPQW2a0llMbQrZLuWVDZDuyK2a0lVMLRLZruWVCVDu0S2\na0lVM7RLYLuWNC1jQzsiNgPfBY4HDgC3ZuYtVQ/WFrZrSdNUpGnvB67LzKci4oPAExHxYGburHi2\nRrNdS6rD2NDOzFeBV4cf742IZ4ETgZkNbdu1pLpMdKYdER8GzgQerWSahlvcv8TW+37MPdt32a4l\n1aJwaA+PRu4GtmTm3upGaibbtaQmmOv3+2MXRcRG4J+BH2TmzQWuO/6iLbFvcYltD+zk3u27ONCH\nz5//Ef7g0o9x2CZvvJFUqrkii4omz23AMwUDG4CFhT1FlzbWcu36/HNOYmFhD+3f3fJ6vflOfO1W\n4v7arcv76/XmC60rcsvfecBXgKcj4kkGLfr6zHxgXRM2mHeGSGqqIneP/AiYmbTy7FpSk3kwO2S7\nltQGhja2a0ntMdOhbbuW1DYzG9q2a0ltNHOhbbuW1GYzFdq2a0ltNxOhbbuW1BWdD23btaQu6Wxo\n264ldVEnQ9t2LamrOhXatmtJXdeZ0LZdS5oFrQ9t27WkWdLq0LZdS5o1rQxt27WkWdW60LZdS5pl\nrQlt27UktSS0bdeSNNDo0LZdS9J7NTa0bdeS9H6NC23btSStrFGhbbuWpNU1IrRt15JUTO2hbbuW\npOJqC23btSRNrpbQtl1L0tpMNbRt15K0PlMLbdu1JK3f2NCOiO8Anwdey8zfmPQvsF1LUnmKNO2t\nwN8A35304rZrSSrX2NDOzEci4kOTXHTf4hJ3PbzLdi1JJavkTHvLTf/G7tf32q4lqWSVhPbu1/fa\nriWpAnP9fn/souHxyH1reSFSklSeDQXXzQ3/kyTVaGzTjoi/By4EjgVeA27IzK3VjyZJOlih4xFJ\nUjMUPR6RJDWAoS1JLWJoS1KLlHqfdkRcDHyDwS+D72TmX5V5/Tqt9z1Ymi4iNjN4q4LjgQPArZl5\nS71TlSciNgE/BA5l8H1/d2beWO9U5YqIDcAOYHdmXlb3PGWKiJ8CbzL43lzMzHNrHahkEXE08G3g\ndAZ7vCozH11ubWlNe/gN87fAbwMfB74cER8t6/oNsJXB3rpqP3BdZn4c+C3g6i59/TLzF8BFmXkW\ncCZwSUR06gcf2AI8U/cQFTkAXJiZZ3UtsIduBu7PzNOAM4BnV1pY5vHIucB/Z+YLmbkI3AF8scTr\n1yozHwF+XvccVcnMVzPzqeHHexl805xY71Tlysy3hx9uYtC2O3Pr1PCZ0qUM2loXzdHR49yIOAq4\n4N1bqTNzf2a+tdL6Mo9HTgReGvl8N4MgV8tExIcZtNFln5611fDZ4BPAKcA3M/Pxmkcq09eBrwJH\n1z1IRfrAQxGxBHwrM2+te6ASfQT4WURsZdCydwBbMvOd5RZ38jeX1i4iPgjczeCbZm/d85QpMw8M\nj0c2A5+IiI/VPVMZIuJzDF5reYru/uvl8zLzbAbPJq6OiPPrHqhEG4GzGRSJs4G3ga+ttLjM0H4Z\nOGnk883DP1NLRMRGBoH9d5n5j3XPU5XhU8+HgYvrnqUk5wGXRcTzwPeAiyJi4ve/b7LMfGX4/wXg\nHrr1LH438FJm7hh+fjeDEF9WmaH9OPDrEfGhiDgU+F3gn0q8fhN0tcW86zbgmcy8ue5ByhYRxw1f\noSciDgc+A+ysd6pyZOb1mXlSZp7M4OfuXzPzirrnKktEHDF8BkhEHAl8FvjPeqcqT2a+BrwUEacO\n/+hTrPKCcmln2pm5FBHXAA/yy1v+VnwFtG1G34MlIl6kY+/BEhHnAV8Bno6IJxmcIV6fmQ/UO1lp\nTgBuH55rbwDuzMz7a55JxRwP3BMRfQaZtS0zH6x5prJdC2yLiEOA54ErV1roe49IUov4QqQktYih\nLUktYmhLUosY2pLUIoa2JLWIoS1JLWJoS1KLGNqS1CL/BxCtc6Tvnzh8AAAAAElFTkSuQmCC\n",
+      "text/plain": [
+       "<matplotlib.figure.Figure at 0x114609890>"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "%matplotlib inline\n",
+    "import seaborn as sns\n",
+    "\n",
+    "data = pd.Series([1,2,3,4,5,6,7])\n",
+    "data.plot();\n",
+    "print data.mean()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
