use code blocks

--- a/python-for-data-science/python-for-data-science.ipynb
+++ b/python-for-data-science/python-for-data-science.ipynb
@@ -46,7 +46,7 @@
     "This is in the `.bash_profile` file  \n",
     "\n",
     " - Open `~/.bash_profile` in your favorite text editor  \n",
-    "       vi ~/.bash_profile    \n",
+    " <code data-trim data-noescape>vi ~/.bash_profile</code>    \n",
     " - Add the following line  \n",
     "       export PATH=~/anaconda3/bin:\"&#36;PATH\"\n",
     " - Test your install by runningpython  \n",
