--- a/python-for-data-science/python-for-data-science.ipynb
+++ b/python-for-data-science/python-for-data-science.ipynb
@@ -48,12 +48,11 @@
     " - Open `~/.bash_profile` in your favorite text editor  \n",
     " <code data-trim data-noescape>vi ~/.bash_profile</code>    \n",
     " - Add the following line  \n",
-    "       export PATH=~/anaconda3/bin:\"&#36;PATH\"\n",
+    " <code data-trim data-noescape>export PATH=~/anaconda3/bin:\"&#36;PATH\"</code>\n",
     " - Test your install by runningpython  \n",
     " \n",
-    "You should see something like\n",
-    "\n",
-    "    Python 3.5.2 |Anaconda 4.2.0 (x86_64)| (default, Jul  2 2016, 17:52:12)   \n",
+    "You should see something like  \n",
+    "<code data-trim data-noescape>Python 3.5.2 |Anaconda 4.2.0 (x86_64)| (default, Jul  2 2016, 17:52:12)</code>\n",
     "If not, confirm that your `.bash_profile` has been updated and and restart terminal"
    ]
   },
