slides and sample python scripts

--- a/python-for-data-science/python-for-data-science.ipynb
+++ b/python-for-data-science/python-for-data-science.ipynb
@@ -151,7 +151,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": false,
     "slideshow": {
@@ -617,7 +617,10 @@
    "cell_type": "code",
    "execution_count": 37,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "slideshow": {
+     "slide_type": "-"
+    }
    },
    "outputs": [
     {
@@ -636,6 +639,22 @@
     "\n",
     "reg.fit(aw_db['month'].values.reshape(-1,1), aw_db['total'])\n",
     "print reg.coef_"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {
+    "slideshow": {
+     "slide_type": "slide"
+    }
+   },
+   "source": [
+    "# Questions?\n",
+    "@josibake  \n",
+    "\n",
+    "norfolkdatasci.herokuapp.com  \n",
+    "\n",
+    "norfolkdatasci.slack.com  "
    ]
   }
  ],
