fix slide formatting

--- a/r-nyc-recap/r-nyc-recap.ipynb
+++ b/r-nyc-recap/r-nyc-recap.ipynb
@@ -180,7 +180,7 @@
    "metadata": {
     "collapsed": false,
     "slideshow": {
-     "slide_type": "-"
+     "slide_type": "slide"
     }
    },
    "source": [
