update slides content

--- a/data-science-resume/data-science-resume.ipynb
+++ b/data-science-resume/data-science-resume.ipynb
@@ -254,7 +254,7 @@
     "\n",
     "* **DONT**\n",
     "    - Give a list of buzzwords\n",
-    "    - List technologies you don't _hands on_ experience with\n",
+    "    - List technologies you don't have _hands on_ experience with\n",
     "    \n",
     "* **DO**\n",
     "    - Give examples of how you used the technology\n",
@@ -278,7 +278,7 @@
     "\n",
     "> * Wrote Python and R scripts for automating monthly reports and KPI's\n",
     "> * Created internal dashboards using R shiny apps\n",
-    "> * Analyzed user behavior on website using Scala and Spark in AWS\n"
+    "> * Analyzed json application logs to understand user behavior using Scala and Spark in AWS\n"
    ]
   },
   {
